# genlc

./: .env  .gitignore  README.md  noxfile.py  pyproject.toml
src/genlc/: cli.py  const.py  gnet.py  sam.py  transport.py  util.py
tests/: conftest.py  test_cli.py  test_e2e.py  test_gnet.py  test_sam.py  test_transport.py
